--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4",
     "axios": "^0.17.1",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
-    "react-redux": "4.3.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^4.3.0",
     "react-router": "^2.0.1",
-    "redux": "^3.0.4",
+    "react-scripts": "1.1.4",
+    "redux": "^3.7.2",
     "redux-promise": "^0.5.3"
   },
   "scripts": {
@@ -19,6 +19,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-
   }
 }
