--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^3.10.1",
+    "lodash": "4.17.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-redux": "^4.3.0",
+    "react-redux": "5.0.7",
     "react-router": "^2.0.1",
     "react-scripts": "1.1.4",
-    "redux": "^3.7.2",
+    "redux": "4.0.0",
     "redux-promise": "^0.5.3"
   },
   "scripts": {
